# biojoints

./: .gitignore  cargo.toml  config.toml  readme.md
api/: Cargo.toml
api/src/: lib.rs
api/src/handlers/: kingdom.rs  mod.rs
api/src/service/: config.rs  mod.rs  service_bundle.rs
cloud/: Cargo.toml
cloud/src/storage/: mod.rs  provider.rs  s3_provider.rs  storage_object.rs
graph/: Cargo.toml
graph/src/: lib.rs
migration/: Cargo.toml
migration/src/: lib.rs
migration/src/migrations/: class_migration.rs  country_migration.rs  family_migration.rs  genus_migration.rs  kingdom_migration.rs  migrate.rs  mod.rs  order_migration.rs  phylum_migration.rs  specie_migration.rs  state_migration.rs
migration/src/service/: config.rs  mod.rs  service_bundle.rs
models/: Cargo.toml
models/src/: lib.rs
models/src/data/: crud.rs  data_error.rs  from_data.rs  mod.rs  query_builder.rs
models/src/mysql_impl/: class.rs  family.rs  genus.rs  image.rs  kingdom.rs  mod.rs  model_provider.rs  order.rs  phylum.rs  queries.rs  query.rs  relational_layer.rs  specie.rs
models/src/neo4j_impl/: class.rs  country.rs  family.rs  genus.rs  graph_layer.rs  kingdom.rs  mod.rs  model_provider.rs  order.rs  phylum.rs  queries.rs  query.rs  specie.rs  state.rs
models/src/records/: class.rs  country.rs  family.rs  genus.rs  image.rs  kingdom.rs  mod.rs  order.rs  phylum.rs  specie.rs  state.rs
src/: main.rs
