[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
models = { path = "../models" }
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
mysql = "25.0.1"
neo4rs = "0.8.0"
toml = "0.5.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter"] }
tracing-actix-web = "0.7.15"
tracing-loki = "0.2.6"
reqwest = { version = "0.11", features = ["json"] }
