[package]
name = "migration"
version = "0.1.0"
edition = "2021"

[dependencies]
models = { path = "../models" }
async-trait = "0.1.81"
chrono = "0.4.38"
mysql = "26.0.0"
neo4rs = "0.8.0"
tokio = { version = "1.39.3", features = ["full"] } # For async runtime
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.8"

