[package]
name = "models"
version = "0.1.0"
edition = "2021"

[dependencies]
mysql = "26.0.0"
neo4rs = "0.8.0"
chrono = "0.4.38"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1.86"
mysql_common = { version = "*", features = ["chrono"] }

[dependencies.uuid]
version = "1.13.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "serde",             # Enable serde support
]

